
        * Add eina_barrier API to cover pthread_barrier functionality
        * Add eina_tmpstr_add() and eina_tmpstr_del().

2012-10-04  Vincent Torri

	* Update lz4 code to rev. 77. This fix compilation on NetBSD 5.0

2012-10-31  Cedric Bail

	* Add eet_list_entries().
	* Add eet -l -v to give more information about an eet file.

2012-09-27 Patryk Kaczmarek <patryk.k@samsung.com>

        * Add eet file handle null checks to eet_data_write_cipher(),
        eet_data_descriptor_decode_cipher(),
        eet_data_descriptor_encode_cipher(), eet_data_xattr_cipher_get(),
        eet_data_xattr_cipher_set().

2012-09-27  Carsten Haitzler (The Rasterman)

        * Fix return value of eina_mmap_safety_enabled_set() and
        ensure future eina_mmap_safety_enabled_get() return right value
        on success.

2012-09-21  Carsten Haitzler (The Rasterman)

        * Fix big endian bug with eet image handling and endianess swapping.

2012-09-15  Vincent Torri

        * Add DOCTYPE children to be parse in eina_simple_xml.

2012-09-12 Patryk Kaczmarek <patryk.k@samsung.com>

        * Add EINA_SAFETY checks for proper function arguments.
        * Add check if given arguments (distance and coordinates) in eina_tiler
        and eina_rectangle are not below zero
        * Documentation for eina list specified and eina stringshare fixed

2012-09-11  Cedric Bail

        * Speedup Eina Rbtree Iterator by recycling memory instead of
        massively calling malloc/free.

2012-09-04  Roberto de Souza <zehortigoza@profusion.mobi>

        * Fix EINA_INLIST_FOREACH_SAFE macro to work when inlist is not the
        first item in the struct.

2013-01-15  ChunEon Park (Hermet) <hermet@hermet.pe.kr>

        * Fix SIGFPE in evas map update if image size is 0.

2013-01-22  Daniel Willmann <d.willmann@samsung.com>

        * Fix evas gif loader to return the correct frame duration

2013-01-28  Daniel Willmann <d.willmann@samsung.com>

				* Use ecore_audio in edje-multisense