@@ -86,6 +86,7 @@ Improvements:
     * edje entry: remove ecore_imf_context_reset, cursor update in mouse move event because it's useless.
     * edje entry: move ecore_imf_context_cursor_position_set from mouse down event to mouse up event.
     * Use ecore_audio in edje-multisense
+    * Ecore_Evas wayland-egl only renders now if last frame has been presented.
 
 Fixes:
     * Fix PPC (big endian) image codec bug.
